[gd_scene load_steps=40 format=3 uid="uid://b53u1qvna51bu"]

[ext_resource type="Script" path="res://scripts/lance/lance_enemy.gd" id="1_cvgbt"]
[ext_resource type="Shader" path="res://shaders/chromaKey.gdshader" id="2_h73si"]
[ext_resource type="Texture2D" uid="uid://7w7a37p62rol" path="res://textures/lance/LANCE CHIBI neutral.png" id="2_y38dd"]
[ext_resource type="Texture2D" uid="uid://cmrm4qt2601yk" path="res://animations/lance/dashing/ezgif-frame-001.png" id="4_n66d6"]
[ext_resource type="Texture2D" uid="uid://c4qsifn7rk6ml" path="res://animations/lance/dashing/ezgif-frame-002.png" id="5_0p4dv"]
[ext_resource type="Texture2D" uid="uid://14mu2rb3md8h" path="res://animations/lance/dashing/ezgif-frame-003.png" id="6_ttjdt"]
[ext_resource type="Texture2D" uid="uid://ksjjo1j6uibx" path="res://animations/lance/dashing/ezgif-frame-004.png" id="7_ukmvl"]
[ext_resource type="Texture2D" uid="uid://d18h4bf7kkah3" path="res://animations/lance/dashing/ezgif-frame-005.png" id="8_6owsn"]
[ext_resource type="Texture2D" uid="uid://ll3p3vu3p6ef" path="res://animations/lance/dashing/ezgif-frame-006.png" id="9_dbkbq"]
[ext_resource type="Texture2D" uid="uid://dcvl7ptqyx6k7" path="res://animations/lance/dashing/ezgif-frame-007.png" id="10_0ot8y"]
[ext_resource type="Texture2D" uid="uid://dkx8dstny65wk" path="res://animations/lance/dashing/ezgif-frame-008.png" id="11_clog6"]
[ext_resource type="Texture2D" uid="uid://p7cnf4g7rktg" path="res://animations/lance/dashing/ezgif-frame-009.png" id="12_h2tl3"]
[ext_resource type="Texture2D" uid="uid://dp8ipb13smmls" path="res://animations/lance/dashing/ezgif-frame-010.png" id="13_ktihs"]
[ext_resource type="Texture2D" uid="uid://8ge6edg5mno3" path="res://animations/lance/dashing/ezgif-frame-011.png" id="14_q1oj7"]
[ext_resource type="Texture2D" uid="uid://c82o6xdo26a8" path="res://animations/lance/dashing/ezgif-frame-012.png" id="15_8ve8g"]
[ext_resource type="Texture2D" uid="uid://dl1uo0v3r64bc" path="res://animations/lance/dashing/ezgif-frame-013.png" id="16_36uc8"]
[ext_resource type="Texture2D" uid="uid://d1kpmxlcb1rs2" path="res://animations/lance/dashing/ezgif-frame-014.png" id="17_jfl6j"]
[ext_resource type="Texture2D" uid="uid://bjxysqdd0jy7x" path="res://animations/lance/dashing/ezgif-frame-015.png" id="18_smqyl"]
[ext_resource type="Texture2D" uid="uid://df65575lvhgbv" path="res://animations/lance/dashing/ezgif-frame-016.png" id="19_xgle3"]
[ext_resource type="Texture2D" uid="uid://ccrquf518450m" path="res://textures/lance/spritesheetDash.png" id="20_p7l0a"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jlk8e"]
shader = ExtResource("2_h73si")
shader_parameter/chroma = Color(0.0627451, 1, 0.313726, 1)
shader_parameter/tolerance = 0.427
shader_parameter/fadeAmount = 0.5
shader_parameter/enabled = true

[sub_resource type="SpriteFrames" id="SpriteFrames_ig4jo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_y38dd")
}],
"loop": true,
"name": &"neutral",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_dbkbq")
}, {
"duration": 1.0,
"texture": ExtResource("10_0ot8y")
}, {
"duration": 1.0,
"texture": ExtResource("11_clog6")
}, {
"duration": 1.0,
"texture": ExtResource("12_h2tl3")
}, {
"duration": 1.0,
"texture": ExtResource("13_ktihs")
}, {
"duration": 1.0,
"texture": ExtResource("14_q1oj7")
}, {
"duration": 1.0,
"texture": ExtResource("15_8ve8g")
}, {
"duration": 1.0,
"texture": ExtResource("16_36uc8")
}, {
"duration": 1.0,
"texture": ExtResource("17_jfl6j")
}, {
"duration": 1.0,
"texture": ExtResource("18_smqyl")
}, {
"duration": 1.0,
"texture": ExtResource("19_xgle3")
}],
"loop": true,
"name": &"p1DashLoop",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_n66d6")
}, {
"duration": 1.0,
"texture": ExtResource("5_0p4dv")
}, {
"duration": 1.0,
"texture": ExtResource("6_ttjdt")
}, {
"duration": 1.0,
"texture": ExtResource("7_ukmvl")
}, {
"duration": 1.0,
"texture": ExtResource("8_6owsn")
}],
"loop": false,
"name": &"p1DashStartup",
"speed": 20.0
}]

[sub_resource type="Animation" id="Animation_qopml"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_tc8xw"]
resource_name = "hurt"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.477181, 0, 0.166874, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s7nq6"]
_data = {
"RESET": SubResource("Animation_qopml"),
"hurt": SubResource("Animation_tc8xw")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7rqhy"]
size = Vector2(60, 120)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6f56f"]
size = Vector2(80, 400)

[sub_resource type="Animation" id="Animation_ddjqd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_2n5m6"]
resource_name = "start"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 0.933033),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.966667),
"transitions": PackedFloat32Array(1, 0.378929),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3ng6d"]
_data = {
"RESET": SubResource("Animation_ddjqd"),
"start": SubResource("Animation_2n5m6")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xs6hg"]
size = Vector2(150, 200)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_kr2y7"]
particles_animation = true
particles_anim_h_frames = 2
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Curve" id="Curve_07ne0"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_abyax"]
curve = SubResource("Curve_07ne0")

[sub_resource type="Gradient" id="Gradient_5xmlp"]
offsets = PackedFloat32Array(0, 0.212121, 1)
colors = PackedColorArray(1, 1, 1, 0.847059, 1, 0.913725, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_rk28i"]
gradient = SubResource("Gradient_5xmlp")

[sub_resource type="Curve" id="Curve_wh1e5"]
_data = [Vector2(0, 0.813187), 0.0, 1.57102, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_7umm2"]
curve = SubResource("Curve_wh1e5")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_acok5"]
particle_flag_disable_z = true
emission_shape_scale = Vector3(100, 100, 1)
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 1.0
emission_ring_radius = 1.5
emission_ring_inner_radius = 1.0
angle_min = 1.07288e-05
angle_max = 360.0
angle_curve = SubResource("CurveTexture_abyax")
initial_velocity_min = -20.0
initial_velocity_max = 20.0
gravity = Vector3(0, 0, 0)
scale_min = 0.4
scale_max = 0.6
scale_curve = SubResource("CurveTexture_7umm2")
scale_over_velocity_max = 1.0
color_ramp = SubResource("GradientTexture1D_rk28i")
anim_offset_max = 1.0

[node name="lanceEnemy" type="RigidBody2D"]
gravity_scale = 0.0
freeze_mode = 1
script = ExtResource("1_cvgbt")

[node name="lanceSprite" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_jlk8e")
scale = Vector2(0.08, 0.08)
sprite_frames = SubResource("SpriteFrames_ig4jo")
animation = &"neutral"

[node name="AnimationPlayer" type="AnimationPlayer" parent="lanceSprite"]
libraries = {
"": SubResource("AnimationLibrary_s7nq6")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-1, -1)
shape = SubResource("RectangleShape2D_7rqhy")

[node name="rotators" type="Node2D" parent="."]
position = Vector2(2, 0)

[node name="stabAttackHitbox" type="Area2D" parent="rotators"]
position = Vector2(-2, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="rotators/stabAttackHitbox"]
visible = false
position = Vector2(112, -1.5)
shape = SubResource("RectangleShape2D_6f56f")

[node name="dashArrow" type="ColorRect" parent="rotators"]
visible = false
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -1000.0
offset_top = -100.0
offset_right = 3000.0
offset_bottom = 100.0
grow_vertical = 2
pivot_offset = Vector2(0, 100)
color = Color(1, 0.607843, 1, 0.192157)

[node name="AnimationPlayer" type="AnimationPlayer" parent="rotators/dashArrow"]
libraries = {
"": SubResource("AnimationLibrary_3ng6d")
}

[node name="stabHitbox" type="ColorRect" parent="rotators"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 70.0
offset_top = -200.0
offset_right = 150.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.65098, 1, 0.611765)

[node name="dashWaitTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="dashCDTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="stabTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="dashAttackHitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="dashAttackHitbox"]
visible = false
shape = SubResource("RectangleShape2D_xs6hg")

[node name="throwWaitTimer" type="Timer" parent="."]
one_shot = true

[node name="cloudWaitTimer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="dashParticles" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_kr2y7")
emitting = false
amount = 40
process_material = SubResource("ParticleProcessMaterial_acok5")
texture = ExtResource("20_p7l0a")
lifetime = 0.5

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="dashAttackHitbox" to="." method="_on_dash_attack_hit_box_body_entered"]
